--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ header a {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: brightness(80%);
 }
 
 .carousel .list .item .content {
@@ -73,6 +74,10 @@ header a {
 
 .carousel .list .item .content .topic {
   color: #f1683a;
+}
+.carousel .list .item .content .desc {
+  line-height: 1.8;
+  font-size: 16px;
 }
 
 .carousel .list .item .content .buttons {
@@ -118,6 +123,8 @@ header a {
 }
 
 .thumbnail .item img {
+  filter: brightness(80%);
+
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -193,19 +200,19 @@ header a {
 }
 
 .carousel .list .item:nth-child(1) .title {
-  animation-delay: 1.2s;
+  animation-delay: 0.8s;
 }
 
 .carousel .list .item:nth-child(1) .topic {
-  animation-delay: 1.4s;
+  animation-delay: 1s;
 }
 
 .carousel .list .item:nth-child(1) .desc {
-  animation-delay: 1.6s;
+  animation-delay: 1.2s;
 }
 
 .carousel .list .item:nth-child(1) .buttons {
-  animation-delay: 1.8s;
+  animation-delay: 1.4s;
 }
 
 /* effects next click  */
